--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.2",
   "author": "Roman Krivtsov",
   "engines": {
-    "node": "^14 || ^15 || ^16 || ^18 || ^20"
+    "node": "^14 || ^15 || ^16 || >=18"
   },
   "repository": {
     "type": "git",
